# triasrs

./: Cargo.toml  README.md
.github/workflows/: CI.yml
src/: error.rs  lib.rs  xml_document.rs  xml_library.rs
src/data_types/: mod.rs  stop.rs  transport_modes.rs
src/util/: default_id.rs  mod.rs  mut_field.rs  mut_hash_map.rs  xml_document.rs  xml_library.rs
trias/example_requests/: LocationInformationRequest.xml  StopEventRequest.xml  StopFaresRequest.xml  TripRequest.xml  output-LocationInformationRequest.xml  output-TripRequest.xml  output-abfahrt.xml
