[package]
name = "triasrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-xml-rs = "*"
chrono = "*"
tokio = { version = "*", features = ["full"] }
reqwest = "*"
thiserror = "*"
sxd-xpath = "0.4.2"
sxd-document = "0.3.2"